components/tree-sitter-conceptbase/source/test/corpus/documentation-assertions.txt
==================
doc-assertion-escaped: tutorial/chapters/cbTutorial.typ:1
==================

$forall e/Employee m/Manager
                   (exists d/Department
                     (e dept d) and (d head m))
                   ==> (e boss m)$

---

(source_file
  (assertion_embedding
    (assertion
      (rule
        (kw_forall)
        (variable_bind_list
          (variable_bind
            (var_list
              (identifier))
            (object_name
              (label
                (identifier))))
          (variable_bind
            (var_list
              (identifier))
            (object_name
              (label
                (identifier)))))
        (formula
          (kw_exists)
          (variable_bind_list
            (variable_bind
              (var_list
                (identifier))
              (object_name
                (label
                  (identifier)))))
          (formula
            (formula
              (literal
                (literal_arg
                  (object_name
                    (label
                      (identifier))))
                (infix_symbol
                  (label
                    (identifier)))
                (literal_arg
                  (object_name
                    (label
                      (identifier))))))
            (kw_and)
            (formula
              (literal
                (literal_arg
                  (object_name
                    (label
                      (identifier))))
                (infix_symbol
                  (label
                    (identifier)))
                (literal_arg
                  (object_name
                    (label
                      (identifier))))))))
        (literal
          (literal_arg
            (object_name
              (label
                (identifier))))
          (infix_symbol
            (label
              (identifier)))
          (literal_arg
            (object_name
              (label
                (identifier)))))))))

==================
doc-assertion-escaped: tutorial/chapters/cbTutorial.typ:2
==================

$\" and
that this deductive rule is legal, because all variables appearing in
the conlusion literal (#raw("e,m")) are universally (forall) quantified. The
logically equivalent formula

   forall e/Employee m/Manager d/Department
        (e dept d) and (d head m)
        ==> (e boss m)

can also be used. \
*Exercise 3.7: \
Add the _BossRule_ to the database.*

== Adding Integrity Constraints
<adding-integrity-constraints>
The following integrity constraint specifies that no Manager should earn
less than 50000:

Manager with
   constraint
      earnEnough:$

---

(source_file)

==================
doc-assertion-inline: tutorial/chapters/cbTutorial3.typ:1
==================

$ forall p/Place m/PNModel a/Place!sendsToken\n            (m contains p) and Ai(p,sendsToken,a)\n            ==> (m contains a) \$

---

(source_file)

==================
doc-assertion-inline: tutorial/chapters/cbTutorial3.typ:2
==================

$ forall t/Transition m/PNModel a/Transition!producesToken\n            (m contains t) and Ai(t,producesToken,a) \n            ==> (m contains a) \$

---

(source_file)

==================
doc-assertion-inline: tutorial/chapters/cbTutorial3.typ:3
==================

$ (pn = this) and\n               (this contains elem) and\n               (elem in type) $

---

(source_file)

==================
doc-assertion-escaped: tutorial/chapters/cbTutorial3.typ:1
==================

$forall p/Place m/PNModel a/Place!sendsToken\n            (m contains p) and Ai(p,sendsToken,a)\n            ==> (m contains a) $

---

(source_file)

==================
doc-assertion-escaped: tutorial/chapters/cbTutorial3.typ:2
==================

$forall t/Transition m/PNModel a/Transition!producesToken\n            (m contains t) and Ai(t,producesToken,a) \n            ==> (m contains a) $

---

(source_file)

==================
doc-assertion-escaped: user-manual/chapters/CBserver.typ:4
==================

$3 with Integer. If you supply less parameters than
required by the script, it will issue an error message and quit. If the
script had started a CBserver, then this CBserver is stopped before
quitting. Likewise, if the script had enrolled to an existing CBserver
process, it will unenroll before quitting.

The variable$

---

(source_file)

==================
doc-assertion: user-manual/chapters/ECArules.typ:block:5
==================

ON Tell (x in A) FOR x

---

(source_file)

==================
doc-assertion: user-manual/chapters/ECArules.typ:block:6
==================

Class Employee with
attribute
    salary : Integer
end
View EmployeeWithHighSalary isA Employee with
constraint
    c : $ exists i/Integer (this salary i) and (i > 100000) $
end
Class EmployeeWithHighSalary_Materialized end

---

(source_file
  (telos_object
    (object_name
      (label
        (identifier)))
    (object_name
      (label
        (identifier)))
    (kw_with)
    (decl_list
      (declaration
        (attr_category_list
          (label
            (identifier)))
        (property_list
          (property
            (label
              (identifier))
            (object_name
              (label
                (identifier)))))))
    (end_spec))
  (telos_object
    (object_name
      (label
        (identifier)))
    (object_name
      (label
        (identifier)))
    (kw_isa)
    (class_list
      (object_name
        (label
          (identifier))))
    (kw_with)
    (decl_list
      (declaration
        (attr_category_list
          (label
            (identifier)))
        (property_list
          (property
            (label
              (identifier))
            (assertion_embedding
              (assertion
                (formula
                  (kw_exists)
                  (variable_bind_list
                    (variable_bind
                      (var_list
                        (identifier))
                      (object_name
                        (label
                          (identifier)))))
                  (formula
                    (formula
                      (literal
                        (literal_arg
                          (object_name
                            (label
                              (identifier))))
                        (infix_symbol
                          (label
                            (identifier)))
                        (literal_arg
                          (object_name
                            (label
                              (identifier))))))
                    (kw_and)
                    (formula
                      (literal
                        (ar_expr
                          (ar_term
                            (ar_factor
                              (object_name
                                (label
                                  (identifier))))))
                        (comp_symbol)
                        (ar_expr
                          (ar_term
                            (ar_factor
                              (object_name
                                (label
                                  (number
                                    (integer)))))))))))))))))
    (end_spec))
  (telos_object
    (object_name
      (label
        (identifier)))
    (object_name
      (label
        (identifier)))
    (end_spec)))

==================
doc-assertion: user-manual/chapters/ECArules.typ:block:7
==================

ECArule EmployeeWithHighSalary_Materialized_Ins with
ecarule
   er : $ x/Employee
        ON Tell (x in Employee)
        IF `(x in EmployeeWithHighSalary)
        DO Tell (x in EmployeeWithHighSalary_Materialized) $
end
ECArule EmployeeWithHighSalary_Materialized_Del with
ecarule
   er : $ x/Employee
        ON Untell (x in Employee)
        IF (x in EmployeeWithHighSalary)
        DO Untell (x in EmployeeWithHighSalary_Materialized) $
end
ECArule EmployeeWithHighSalary_Materialized_Ins_salary with
ecarule
   er : $ x/Employee y/Integer
        ON Tell (x salary y)
        IF `(x in EmployeeWithHighSalary)
        DO Tell (x in EmployeeWithHighSalary_Materialized) $
end
ECArule EmployeeWithHighSalary_Materialized_Del_salary with
ecarule
   er : $ x/Employee y/Integer
        ON Untell (x salary y)
        IF (x in EmployeeWithHighSalary)
        DO Untell (x in EmployeeWithHighSalary_Materialized) $
end

---

(source_file
  (telos_object
    (object_name
      (label
        (identifier)))
    (object_name
      (label
        (identifier)))
    (kw_with)
    (decl_list
      (declaration
        (attr_category_list
          (label
            (identifier)))
        (property_list
          (property
            (label
              (identifier))
            (assertion_embedding
              (assertion
                (ecarule
                  (variable_bind_list
                    (variable_bind
                      (var_list
                        (identifier))
                      (object_name
                        (label
                          (identifier)))))
                  (kw_on)
                  (eca_event
                    (event_op)
                    (literal
                      (literal_arg
                        (object_name
                          (label
                            (identifier))))
                      (infix_symbol
                        (kw_in))
                      (literal_arg
                        (object_name
                          (label
                            (identifier))))))
                  (if_clause)
                  (cond_formula
                    (cond_formula
                      (literal
                        (literal_arg
                          (object_name
                            (label
                              (identifier))))
                        (infix_symbol
                          (kw_in))
                        (literal_arg
                          (object_name
                            (label
                              (identifier)))))))
                  (kw_do)
                  (action_list
                    (action
                      (action_op)
                      (literal
                        (literal_arg
                          (object_name
                            (label
                              (identifier))))
                        (infix_symbol
                          (kw_in))
                        (literal_arg
                          (object_name
                            (label
                              (identifier))))))))))))))
    (end_spec))
  (telos_object
    (object_name
      (label
        (identifier)))
    (object_name
      (label
        (identifier)))
    (kw_with)
    (decl_list
      (declaration
        (attr_category_list
          (label
            (identifier)))
        (property_list
          (property
            (label
              (identifier))
            (assertion_embedding
              (assertion
                (ecarule
                  (variable_bind_list
                    (variable_bind
                      (var_list
                        (identifier))
                      (object_name
                        (label
                          (identifier)))))
                  (kw_on)
                  (eca_event
                    (event_op)
                    (literal
                      (literal_arg
                        (object_name
                          (label
                            (identifier))))
                      (infix_symbol
                        (kw_in))
                      (literal_arg
                        (object_name
                          (label
                            (identifier))))))
                  (if_clause)
                  (cond_formula
                    (literal
                      (literal_arg
                        (object_name
                          (label
                            (identifier))))
                      (infix_symbol
                        (kw_in))
                      (literal_arg
                        (object_name
                          (label
                            (identifier))))))
                  (kw_do)
                  (action_list
                    (action
                      (action_op)
                      (literal
                        (literal_arg
                          (object_name
                            (label
                              (identifier))))
                        (infix_symbol
                          (kw_in))
                        (literal_arg
                          (object_name
                            (label
                              (identifier))))))))))))))
    (end_spec))
  (telos_object
    (object_name
      (label
        (identifier)))
    (object_name
      (label
        (identifier)))
    (kw_with)
    (decl_list
      (declaration
        (attr_category_list
          (label
            (identifier)))
        (property_list
          (property
            (label
              (identifier))
            (assertion_embedding
              (assertion
                (ecarule
                  (variable_bind_list
                    (variable_bind
                      (var_list
                        (identifier))
                      (object_name
                        (label
                          (identifier))))
                    (variable_bind
                      (var_list
                        (identifier))
                      (object_name
                        (label
                          (identifier)))))
                  (kw_on)
                  (eca_event
                    (event_op)
                    (literal
                      (literal_arg
                        (object_name
                          (label
                            (identifier))))
                      (infix_symbol
                        (label
                          (identifier)))
                      (literal_arg
                        (object_name
                          (label
                            (identifier))))))
                  (if_clause)
                  (cond_formula
                    (cond_formula
                      (literal
                        (literal_arg
                          (object_name
                            (label
                              (identifier))))
                        (infix_symbol
                          (kw_in))
                        (literal_arg
                          (object_name
                            (label
                              (identifier)))))))
                  (kw_do)
                  (action_list
                    (action
                      (action_op)
                      (literal
                        (literal_arg
                          (object_name
                            (label
                              (identifier))))
                        (infix_symbol
                          (kw_in))
                        (literal_arg
                          (object_name
                            (label
                              (identifier))))))))))))))
    (end_spec))
  (telos_object
    (object_name
      (label
        (identifier)))
    (object_name
      (label
        (identifier)))
    (kw_with)
    (decl_list
      (declaration
        (attr_category_list
          (label
            (identifier)))
        (property_list
          (property
            (label
              (identifier))
            (assertion_embedding
              (assertion
                (ecarule
                  (variable_bind_list
                    (variable_bind
                      (var_list
                        (identifier))
                      (object_name
                        (label
                          (identifier))))
                    (variable_bind
                      (var_list
                        (identifier))
                      (object_name
                        (label
                          (identifier)))))
                  (kw_on)
                  (eca_event
                    (event_op)
                    (literal
                      (literal_arg
                        (object_name
                          (label
                            (identifier))))
                      (infix_symbol
                        (label
                          (identifier)))
                      (literal_arg
                        (object_name
                          (label
                            (identifier))))))
                  (if_clause)
                  (cond_formula
                    (literal
                      (literal_arg
                        (object_name
                          (label
                            (identifier))))
                      (infix_symbol
                        (kw_in))
                      (literal_arg
                        (object_name
                          (label
                            (identifier))))))
                  (kw_do)
                  (action_list
                    (action
                      (action_op)
                      (literal
                        (literal_arg
                          (object_name
                            (label
                              (identifier))))
                        (infix_symbol
                          (kw_in))
                        (literal_arg
                          (object_name
                            (label
                              (identifier))))))))))))))
    (end_spec)))

==================
doc-assertion: user-manual/chapters/ECArules.typ:block:8
==================

Class Employee end
EmployeeCounter end

ECArule EmployeeCounterRule with
ecarule
        er : $  x/Employee i,i1/Integer
        ON Tell(In(x,Employee))
        IF (i in EmployeeCounter)
        DO Untell(In(i,EmployeeCounter)),
           Call(increment(i,i1)),
           Tell(In(i1,EmployeeCounter))
        ELSE Tell(In(1,EmployeeCounter))
        $
end

ECArule EmployeeCounterRule_del with
ecarule
        er : $  x/Employee i,i1/Integer
        ON Untell(In(x,Employee))
        IF (i in EmployeeCounter)
        DO Untell(In(i,EmployeeCounter)),
           Call(decrement(i,i1)),
           Tell(In(i1,EmployeeCounter))
        $
end

---

(source_file
  (telos_object
    (object_name
      (label
        (identifier)))
    (object_name
      (label
        (identifier)))
    (end_spec))
  (telos_object
    (object_name
      (label
        (identifier)))
    (end_spec))
  (telos_object
    (object_name
      (label
        (identifier)))
    (object_name
      (label
        (identifier)))
    (kw_with)
    (decl_list
      (declaration
        (attr_category_list
          (label
            (identifier)))
        (property_list
          (property
            (label
              (identifier))
            (assertion_embedding
              (assertion
                (ecarule
                  (variable_bind_list
                    (variable_bind
                      (var_list
                        (identifier))
                      (object_name
                        (label
                          (identifier))))
                    (variable_bind
                      (var_list
                        (identifier)
                        (identifier))
                      (object_name
                        (label
                          (identifier)))))
                  (kw_on)
                  (eca_event
                    (event_op)
                    (literal
                      (functor)
                      (literal_arg_list
                        (literal_arg
                          (object_name
                            (label
                              (identifier))))
                        (literal_arg
                          (object_name
                            (label
                              (identifier)))))))
                  (if_clause)
                  (cond_formula
                    (literal
                      (literal_arg
                        (object_name
                          (label
                            (identifier))))
                      (infix_symbol
                        (kw_in))
                      (literal_arg
                        (object_name
                          (label
                            (identifier))))))
                  (kw_do)
                  (action_list
                    (action
                      (action_op)
                      (literal
                        (functor)
                        (literal_arg_list
                          (literal_arg
                            (object_name
                              (label
                                (identifier))))
                          (literal_arg
                            (object_name
                              (label
                                (identifier)))))))
                    (action
                      (action_op)
                      (literal
                        (label
                          (identifier))
                        (literal_arg_list
                          (literal_arg
                            (object_name
                              (label
                                (identifier))))
                          (literal_arg
                            (object_name
                              (label
                                (identifier)))))))
                    (action
                      (action_op)
                      (literal
                        (functor)
                        (literal_arg_list
                          (literal_arg
                            (object_name
                              (label
                                (identifier))))
                          (literal_arg
                            (object_name
                              (label
                                (identifier))))))))
                  (kw_else)
                  (action_list
                    (action
                      (action_op)
                      (literal
                        (functor)
                        (literal_arg_list
                          (literal_arg
                            (object_name
                              (label
                                (number
                                  (integer)))))
                          (literal_arg
                            (object_name
                              (label
                                (identifier)))))))))))))))
    (end_spec))
  (telos_object
    (object_name
      (label
        (identifier)))
    (object_name
      (label
        (identifier)))
    (kw_with)
    (decl_list
      (declaration
        (attr_category_list
          (label
            (identifier)))
        (property_list
          (property
            (label
              (identifier))
            (assertion_embedding
              (assertion
                (ecarule
                  (variable_bind_list
                    (variable_bind
                      (var_list
                        (identifier))
                      (object_name
                        (label
                          (identifier))))
                    (variable_bind
                      (var_list
                        (identifier)
                        (identifier))
                      (object_name
                        (label
                          (identifier)))))
                  (kw_on)
                  (eca_event
                    (event_op)
                    (literal
                      (functor)
                      (literal_arg_list
                        (literal_arg
                          (object_name
                            (label
                              (identifier))))
                        (literal_arg
                          (object_name
                            (label
                              (identifier)))))))
                  (if_clause)
                  (cond_formula
                    (literal
                      (literal_arg
                        (object_name
                          (label
                            (identifier))))
                      (infix_symbol
                        (kw_in))
                      (literal_arg
                        (object_name
                          (label
                            (identifier))))))
                  (kw_do)
                  (action_list
                    (action
                      (action_op)
                      (literal
                        (functor)
                        (literal_arg_list
                          (literal_arg
                            (object_name
                              (label
                                (identifier))))
                          (literal_arg
                            (object_name
                              (label
                                (identifier)))))))
                    (action
                      (action_op)
                      (literal
                        (label
                          (identifier))
                        (literal_arg_list
                          (literal_arg
                            (object_name
                              (label
                                (identifier))))
                          (literal_arg
                            (object_name
                              (label
                                (identifier)))))))
                    (action
                      (action_op)
                      (literal
                        (functor)
                        (literal_arg_list
                          (literal_arg
                            (object_name
                              (label
                                (identifier))))
                          (literal_arg
                            (object_name
                              (label
                                (identifier)))))))))))))))
    (end_spec)))

==================
doc-assertion: user-manual/chapters/ECArules.typ:block:10
==================

ECArule LastModified_init with
   mode m: ImmediateDeferred
   ecarule
        er : $ t/TransactionTime y/Employee
               es/Employee!salary
        ON Tell (es in Employee!salary)
        IFNEW
           From(es,y) and (y in EmpWithoutLastModified) and Known(es,t)
        DO Tell (y lastModified t)
        $
end

ECArule LastModified_change with
   mode m: ImmediateDeferred
   ecarule
        er : $ t1,t2/TransactionTime y/Employee i/Integer
               es/Employee!salary lab/Label
        ON Tell (es in Employee!salary)
        IFNEW 
           From(es,y) and (y lastModified t1) and Known(es,t2)
        DO Untell (y lastModified t1),
           Tell (y lastModified t2)
        $
end

---
